tests/health/gold/sdk/tests__lsp__field-storing-definition-test.toit.gold
tests/lsp/field-storing-definition-test.toit:61:23: warning: Field-storing parameters in non-constructors are deprecated
  constructor.factory .field-B1:
                      ^~~~~~~~~
tests/lsp/field-storing-definition-test.toit:61:23: error: Field-storing parameter not allowed in static functions
  constructor.factory .field-B1:
                      ^~~~~~~~~
tests/lsp/field-storing-definition-test.toit:95:14: warning: Field-storing parameters in non-constructors are deprecated
  static foo .field-B1:
             ^~~~~~~~~
tests/lsp/field-storing-definition-test.toit:95:14: error: Field-storing parameter not allowed in static functions
  static foo .field-B1:
             ^~~~~~~~~
tests/lsp/field-storing-definition-test.toit:70:7: warning: Field-storing parameters in non-constructors are deprecated
      .field-B1
      ^~~~~~~~~
tests/lsp/field-storing-definition-test.toit:74:7: warning: Field-storing parameters in non-constructors are deprecated
      .field-B2
      ^~~~~~~~~
tests/lsp/field-storing-definition-test.toit:78:7: warning: Field-storing parameters in non-constructors are deprecated
      .field-B3
      ^~~~~~~~~
tests/lsp/field-storing-definition-test.toit:82:7: warning: Field-storing parameters in non-constructors are deprecated
      .field-B4
      ^~~~~~~~~
tests/lsp/field-storing-definition-test.toit:86:7: warning: Field-storing parameters in non-constructors are deprecated
      .field-B5
      ^~~~~~~~~
tests/lsp/field-storing-definition-test.toit:90:7: warning: Field-storing parameters in non-constructors are deprecated
      .field-B6:
      ^~~~~~~~~
tests/lsp/field-storing-definition-test.toit:74:7: error: Can't set final field
      .field-B2
      ^~~~~~~~~
tests/lsp/field-storing-definition-test.toit:82:7: error: Can't set final field
      .field-B4
      ^~~~~~~~~
tests/lsp/field-storing-definition-test.toit:90:7: error: Can't set final field
      .field-B6:
      ^~~~~~~~~
